# harness-prompts

./: README.md  coder.md  digest.md  pyproject.toml  requirements-dev.txt  reviewer.md
examples/fibonacci/: README.md  fib.py  test_fib.py
harness/: __init__.py  __main__.py  agent.py  cli.py  gate.py  git_utils.py  orchestrator.py  state.py  tools.py
harness/prompts/: __init__.py  coder.md  digest.md  reviewer.md
tests/: conftest.py  test_gate.py  test_git_utils.py  test_orchestrator.py  test_state.py  test_tools.py
